--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@tensorflow/tfjs": "^3.18.0"
+    "@tensorflow/tfjs": "^3.18.0",
+    "axios": "^0.27.2",
+    "ts-node": "^10.9.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.18.6",
     "@babel/core": "^7.18.6",
     "@babel/node": "^7.18.6",
-    "@babel/plugin-proposal-decorators": "^7.18.6"
-  }
+    "@babel/plugin-proposal-decorators": "^7.18.6",
+    "typescript": "^4.7.4"
+  },
+  "type": "module"
 }
